# drone

./: dron_main.sh  exportar.py
app/: build.gradle
app/src/androidTest/java/com/example/rosdron/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rosdron/: ConexionManager.java  ErrorManager.java  MainActivity.java  ROSJavaSubscriberNodeDHT.java  ROSJavaSubscriberNodeDronGPS.java
app/src/main/java/sensores_prueba/: DHT.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rosdron/: ExampleUnitTest.java
ros/sensores_prueba/: CMakeLists.txt  package.xml  pub_anemometro.py  pub_dht.cpp  sensores_prueba.launch  sub_sensores.py
ros/sensores_prueba/msg/: DHT.msg  DatosAnemometro.msg
