<?xml version="1.0"?>
<package format="2">
  <name>sensores_prueba</name>
  <version>0.0.0</version>
  <description>The prueba package</description>
  <maintainer email="b.lebrecht01@ufromail.cl">blebrecht01</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>


  <export>

  </export>
</package>
